fix paragraph spacing

--- a/src/features/pdf/PDFView.module.css
+++ b/src/features/pdf/PDFView.module.css
@@ -1,5 +1,6 @@
 .pdf-wrapper h1 {
   font-size: xx-large;
+  margin-bottom: 2rem;
 }
 
 .component-container {
